# IndustrialRobots

./: .gitmodules  README.md
ABBDriver/abb_egm_rws_managers/: CMakeLists.txt  README.md  package.xml
ABBDriver/abb_egm_rws_managers/cmake/: Config.cmake.in
ABBDriver/abb_egm_rws_managers/include/abb_egm_rws_managers/: data_containers.h  egm_manager.h  rws_manager.h  system_data_parser.h  utilities.h
ABBDriver/abb_egm_rws_managers/proto/: robot_controller_description.proto
ABBDriver/abb_egm_rws_managers/src/: egm_manager.cpp  rws_manager.cpp  system_data_parser.cpp  utilities.cpp
ABBDriver/abb_ros2_msgs/abb_egm_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ABBDriver/abb_ros2_msgs/abb_egm_msgs/msg/: EGMChannelState.msg  EGMState.msg
ABBDriver/abb_ros2_msgs/abb_rapid_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ABBDriver/abb_ros2_msgs/abb_rapid_msgs/msg/: ConfData.msg  ExtJoint.msg  JointTarget.msg  LoadData.msg  Orient.msg  Pos.msg  Pose.msg  RobJoint.msg  RobTarget.msg  ToolData.msg  WObjData.msg
ABBDriver/abb_ros2_msgs/abb_rapid_sm_addin_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ABBDriver/abb_ros2_msgs/abb_rapid_sm_addin_msgs/msg/: EGMActivateSettings.msg  EGMRunSettings.msg  EGMSettings.msg  EGMSetupSettings.msg  EGMStopSettings.msg  RuntimeState.msg  StateMachineState.msg
ABBDriver/abb_ros2_msgs/abb_rapid_sm_addin_msgs/srv/: GetEGMSettings.srv  SetEGMSettings.srv  SetRAPIDRoutine.srv  SetSGCommand.srv
ABBDriver/abb_ros2_msgs/abb_robot_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ABBDriver/abb_ros2_msgs/abb_robot_msgs/msg/: MechanicalUnitState.msg  RAPIDSymbolPath.msg  RAPIDTaskState.msg  ServiceResponses.msg  SystemState.msg
ABBDriver/abb_ros2_msgs/abb_robot_msgs/srv/: GetFileContents.srv  GetIOSignal.srv  GetRAPIDBool.srv  GetRAPIDDnum.srv  GetRAPIDNum.srv  GetRAPIDString.srv  GetRAPIDSymbol.srv  GetRobotControllerDescription.srv  GetSpeedRatio.srv  SetFileContents.srv  SetIOSignal.srv  SetRAPIDBool.srv  SetRAPIDDnum.srv  SetRAPIDNum.srv  SetRAPIDString.srv  SetRAPIDSymbol.srv  SetSpeedRatio.srv  TriggerWithResultCode.srv
IFRA_ConveyorBelt/ros2_conveyorbelt/: CMakeLists.txt  package.xml
IFRA_ConveyorBelt/ros2_conveyorbelt/include/ros2_conveyorbelt/: ros2_conveyorbelt_plugin.hpp
IFRA_ConveyorBelt/ros2_conveyorbelt/python/: SpawnObject.py
IFRA_ConveyorBelt/ros2_conveyorbelt/src/: ros2_conveyorbelt_plugin.cpp
IFRA_LinkAttacher/ros2_LinkAttacher/: CMakeLists.txt  package.xml
IFRA_LinkAttacher/ros2_LinkAttacher/include/ros2_linkattacher/: gazebo_link_attacher.hpp
IFRA_LinkAttacher/ros2_LinkAttacher/src/: gazebo_link_attacher.cpp
IFRA_LinkPose/: README.md
IFRA_LinkPose/ros2_linkpose/: CMakeLists.txt  package.xml
IFRA_LinkPose/ros2_linkpose/python/: SpawnObject.py
IFRA_LinkPose/ros2_linkpose/src/: ros2_linkpose_plugin.cpp
exercise_two/pcl_filter/: CMakeLists.txt  package.xml
exercise_two/pcl_filter/src/: example.cpp
industrial_robots/neo_common/: CMakeLists.txt  package.xml
industrial_robots/neo_kinematics_mecanum/: CMakeLists.txt  README.md  package.xml
industrial_robots/neo_kinematics_mecanum/launch/: test_setup.launch  test_setup.yaml  test_simulation.launch
industrial_robots/neo_msgs/: CMakeLists.txt  README.md  package.xml
industrial_robots/neo_msgs/msg/: EmergencyStopState.msg  IOBoard.msg  Keypad.msg  LCDOutput.msg  RelayBoardV2.msg  USBoard.msg
industrial_robots/neo_srvs/: CMakeLists.txt  README.md  package.xml
industrial_robots/neo_srvs/srv/: IOBoardSetDigOut.srv  RelayBoardSetLCDMsg.srv  ResetOmniWheels.srv
industrial_robots/pcl_filter/: CMakeLists.txt  package.xml
industrial_robots/pcl_filter/launch/: convex_hull.launch  extractpolygon.launch
industrial_robots/pcl_filter/src/: example.cpp  pcl_filter_server.cpp  pcl_filter_server_backup.cpp
industrial_robots/pcl_filter_msgs/: CMakeLists.txt  package.xml
industrial_robots/pcl_filter_msgs/msg/: ColorFilter.msg  ShapeFilter.msg
industrial_robots/ur5_gripper_demo/: CMakeLists.txt  package.xml
industrial_robots/ur5_gripper_demo/launch/: initialize.launch
industrial_robots/ur5_gripper_demo/rviz/: ur5.rviz
industrial_robots/ur5_gripper_demo/scripts/: ur5_gripper.py  ur5_pick_and_place.py
industrial_robots/ur5_gripper_demo/worlds/: warehouse.world
pick_place_exercise/: package.xml  setup.cfg  setup.py
pick_place_exercise/launch/: ur_robotiq_sim_warehouse.launch.py  ur_sim_control.launch.py  ur_sim_moveit_warehouse.launch.py  ur_sim_warehouse.launch.py
pick_place_exercise/models/blue_ball/: model.sdf
pick_place_exercise/models/blue_box/: model.config
pick_place_exercise/models/blue_target/: model.config  model.sdf
pick_place_exercise/models/conveyor/: model.config
pick_place_exercise/models/green_ball/: model.sdf
pick_place_exercise/models/green_target/: model.sdf
pick_place_exercise/models/ground_logo_corner/: model.sdf
pick_place_exercise/models/red_target/: model.config
pick_place_exercise/models/yellow_tray/: model.config  model.sdf
pick_place_exercise/pick_place_exercise/: FK.py  IK_moveJ.py  IK_moveL.py  spawn_model.py  test_pick_and_place.py
pick_place_exercise/urdf/: ur_robotiq85_macro.xacro  ur_robotiq85_test.xacro
rqt_industrial_robot/: CMakeLists.txt  all.perspective  kinematics.perspective  mobile_manipulator.perspective  package.xml  plugin_camera.xml  plugin_kinematics.xml  plugin_mobile_manipulator.xml  plugin_vacuum_gripper.xml  setup.py  ur5_vacuum_gripper.perspective  ur5_vacuum_gripper_camera.perspective
rqt_industrial_robot/resources/: CameraViewer.ui  KinematicsPlugin.ui  VacuumGripper.ui  resources.qrc
rqt_industrial_robot/scripts/: rqt_camera.py  rqt_kinematics.py  rqt_mobile_manipulator.py  rqt_vacuum_gripper.py
rqt_industrial_robot/src/rqt_camera/: __init__.py  camera_manager.py  camera_module.py
rqt_industrial_robot/src/rqt_kinematics/: kinematics_module.py
rqt_industrial_robot/src/rqt_mobile_manipulator/: mobile_manipulator_module.py
rqt_industrial_robot/src/rqt_vacuum_gripper/: resources_rc.py  vacuum_gripper_module.py
(+386 files in other folders)
