<?xml version="1.0"?>
<package format="2">
  <name>rqt_industrial_robot</name>
  <version>0.0.0</version>
  <description>The rqt_industrial_robot package</description>

  <maintainer email="yijia.wu.gr@dartmouth.edu">Yijia Wu</maintainer>
  <author email="yijia.wu.gr@dartmouth.edu">Yijia Wu</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin_kinematics.xml"/>
    <rqt_gui plugin="${prefix}/plugin_vacuum_gripper.xml"/>
    <rqt_gui plugin="${prefix}/plugin_camera.xml"/>
    <rqt_gui plugin="${prefix}/plugin_mobile_manipulator.xml"/>
  </export>
</package>
