<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_egm_rws_managers</name>
  <version>0.5.0</version>
  <description>
    Provides a C++ library for managing communication with ABB robot controllers, via
    the Robot Web Services (RWS) and the Externally Guided Motion (EGM) interfaces.
  </description>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>abb_libegm</depend>
  <depend>abb_librws</depend>

  <build_depend>protobuf-dev</build_depend>
  <build_export_depend>protobuf-dev</build_export_depend>

  <exec_depend>protobuf</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
