<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_linkpose</name>
  <version>0.0.0</version>
  <description>IFRA-Cranfield (Cranfield University, UK). Package: IFRA_LinkPose - LinkPose GzPlugin (ROS2)</description>

  <author>Mikel Bueno Viso</author>
  <maintainer email="Mikel.Bueno-Viso@cranfield.ac.uk">Mikel Bueno Viso</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>rclcpp</depend>
  
  <build_depend>linkpose_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>