<package format="2">
  <name>neo_srvs</name>
  <version>0.1.0</version>
  <description>ROS-Services for Neobotix mobile Robots</description>

  <license>LGPL</license>

  <maintainer email="ros@neobotix.de">Neobotix</maintainer>

  <license>BSD</license>
  <url type="website">http://www.neobotix-robots.com</url>

  <author>Jan-Niklas Nieland</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
