<?xml version="1.0"?>
<package format="3">
  <name>abb_rapid_msgs</name>
  <version>1.0.0</version>
  <description>
    Provides ROS message definitions, representing RAPID data from ABB robot controllers.
  </description>
  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
