<?xml version="1.0"?>
<package format="3">
  <name>abb_rapid_sm_addin_msgs</name>
  <version>1.0.0</version>
  <description>
    Provides ROS message and service definitions, representing interaction
    with ABB robot controllers using the RobotWare StateMachine Add-In.
  </description>
  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>abb_rapid_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
